# fingerprint-extension

./: Makefile.am  README.md  autogen.sh  configure.ac  fingerprint.pc.in  project.config
libfprint-0.6.0/: ChangeLog  Makefile.in  config.h.in  configure
libfprint-0.6.0/doc/: Makefile.in
libfprint-0.6.0/examples/: Makefile.in
libfprint-0.6.0/libfprint/: 60-fprint-autosuspend.rules  Makefile.in
packaging/: fingerprint-extension.spec
src/: fingerprint.c  fingerprint.js
tests/: check-fingerprint.c
